--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -68,6 +68,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".doze.DozeTileService"
+            android:icon="@drawable/ic_doze_brightness_auto"
+            android:label="@string/doze_brightness_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
                 <activity
             android:name=".thermal.ThermalActivity"
             android:label="@string/thermal_title"
